Moar spacing and font given correctly

--- a/_sass/local-styles/_layout.scss
+++ b/_sass/local-styles/_layout.scss
@@ -53,10 +53,16 @@ h1 {
         padding-right: 20px;
     }
     h1 {
-        margin-bottom: 12px;
+        margin: 36px auto 18px auto;
     }
     h2 {
         margin-bottom: 24px;
+    }
+}
+
+.content {
+    hr {
+        margin: 36px auto;
     }
 }
 
