--- a/_sass/local-styles/_typography.scss
+++ b/_sass/local-styles/_typography.scss
@@ -16,13 +16,10 @@ body {
     }
 }
 .content {
-    font-face: "Open Sans";
-    h1, h2, h3, h4 {
-        font-face: "Helvetica";
-        color: #111111;
+    h1, h2, h3, h4, h5 {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-weight: 500;
-    }
-    h1, h2, h3, h4, h5, p {
+        color: #111111;
         margin-bottom: 24px;
         padding: 0;
     }
@@ -44,11 +41,11 @@ body {
     }
     h5 {
         font-size: 1em;
-        font-face: "Helvetica";
     }
 
     p, li {
         font-size: 1.2em;
+        line-height: 1.8em;
         width: 80%;
         color: #444444;
         a, a:visited {
